versioned_docs/version-26.1/wiki/defaultworldtype.mdx
---
description: Change the default world type for creating a new world in Create World screen.
---

# Default World Type

import ProjectHeader from '@site/src/components/ProjectHeader';

<ProjectHeader slug="defaultworldtype" mcVersion="26.1"/>

A client-side mod that allows modpack creators to pre-define default world presets for streamlined world creation.

---

:::info
This mod is primarily intended for modpack creators. Regular players who only want to combine a few mods usually don't
need it—unless they frequently create worlds with a specific world preset.
:::

## Helper Files
When you join a world, the mod will automatically generate two files:
- `<instance>/config/defaultworldtype/world-types.txt`
- `<instance>/config/defaultworldtype/biomes.txt`

These files list all possible values for the configurations.

## World Types
To set a default world preset, choose a value from the file `world-types.txt` and update the configuration
`world-preset`. The selected preset will automatically be applied when players access the world creation screen.

:::info
In the config file, you can also choose to disable the preset selection button. This way, no other world type can be
chosen.
:::

If you also want to allow specific world types, you can use the `allowed-world-types` config by adding all world
types to this list that should be selectable. However, all other presets will still be available when the user presses
the `Alt` key, as in vanilla.

## World Type Specific Settings
### Flat
In the `flat-settings`, you may set the generator settings for the flat world type. You can find more information about
the syntax on the [Official Minecraft Wiki](https://minecraft.wiki/w/Superflat#Preset_code_example) page.

### Single Biome
You can set the biome for the single biome world type using the `single-biome-biome` config. You find all biomes in
the `biomes.txt` file.
